[project]
name = "shironeko-database"
version = "0.1.0"
description = ""
authors = [
    {name = "hysa",email = "480800+hysa@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli] (>=1.2.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "shironeko_database", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
